--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>企業 Web3 實戰工作坊 | 區塊勢 × Dinngo</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -15,15 +15,7 @@
     </style>
 </head>
 <body class="bg-slate-50 text-slate-800 overflow-hidden">
-    <div id="root">
-        <noscript>
-            <div class="min-h-screen flex flex-col items-center justify-center p-8 text-center">
-                <p class="text-slate-600 mb-4">請開啟 JavaScript 以檢視投影片</p>
-                <a href="info.html" class="text-amber-600 hover:underline font-medium">→ 今日資訊</a>
-            </div>
-        </noscript>
-        <div class="min-h-screen flex items-center justify-center text-slate-400" id="loading">載入中...</div>
-    </div>
+    <div id="root"></div>
 
     <script type="text/babel">
         const { useState, useEffect, useCallback } = React;
