--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>企業 Web3 實戰工作坊 | 區塊勢 × Dinngo</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7/babel.min.js" crossorigin></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Noto Sans TC', sans-serif; }
@@ -15,7 +15,12 @@
     </style>
 </head>
 <body class="bg-slate-50 text-slate-800 overflow-hidden">
-    <div id="root"></div>
+    <div id="root">
+        <div class="min-h-screen flex flex-col items-center justify-center p-8 text-center text-slate-500" id="fallback">
+            <p class="mb-4">載入中…</p>
+            <a href="info.html" class="text-amber-600 hover:underline">若無法顯示，請點此查看今日資訊</a>
+        </div>
+    </div>
 
     <script type="text/babel">
         const { useState, useEffect, useCallback } = React;
