--- a/info.html
+++ b/info.html
@@ -19,39 +19,9 @@
             <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × Dinngo</p>
         </header>
 
-        <!-- 場地資訊（置頂） -->
-        <section class="bg-amber-50 rounded-2xl shadow-sm border border-amber-200 p-6 md:p-8 mb-6">
-            <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-4 border-l-4 border-amber-500 pl-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                今日場地
-            </h2>
-            <p class="text-2xl font-bold text-slate-900 mb-2">集思台大會議中心 · 尼采廳（B1）</p>
-            <p class="text-slate-600 mb-4">臺北市羅斯福路四段 85 號 B1 · 階梯型會議空間 41.4 坪 · 教室型 48 人</p>
-            <p class="text-sm text-slate-500">捷運松山新店線「公館站」2 號出口左轉，步行約 2 分鐘 · 停車：台大公館二活停車場</p>
-        </section>
-
-        <!-- Wi-Fi 網路 -->
-        <section class="bg-white rounded-2xl shadow-sm border border-slate-200 p-6 md:p-8 mb-6">
-            <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-4 border-l-4 border-amber-500 pl-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M5 12.55a11 11 0 0 1 14.08 0"/><path d="M1.42 9a16 16 0 0 1 21.16 0"/><path d="M8.53 16.11a6 6 0 0 1 6.95 0"/><circle cx="12" cy="20" r="1"/></svg>
-                Wi-Fi 網路
-            </h2>
-            <div class="grid md:grid-cols-2 gap-4">
-                <div class="bg-slate-50 rounded-xl p-4 border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">網路名稱</p>
-                    <p class="text-xl font-mono font-bold text-slate-800">請向工作人員索取</p>
-                </div>
-                <div class="bg-slate-50 rounded-xl p-4 border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">密碼</p>
-                    <p class="text-xl font-mono font-bold text-slate-800">請向工作人員索取</p>
-                </div>
-            </div>
-            <p class="text-sm text-slate-500 mt-3">會議中心聯絡：(02) 3366-5006～5012</p>
-        </section>
-
-        <!-- 今日時間表 -->
-        <section class="bg-white rounded-2xl shadow-sm border border-slate-200 p-6 md:p-8 mb-6">
-            <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-6 border-l-4 border-amber-500 pl-4">
+        <!-- 今日時間表（置頂，最重要） -->
+        <section class="bg-white rounded-2xl shadow-lg border-2 border-amber-200 p-6 md:p-10 mb-6">
+            <h2 class="flex items-center gap-3 text-2xl font-bold text-slate-800 mb-6 border-l-4 border-amber-500 pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
                 今日時間表
             </h2>
@@ -119,6 +89,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- 場地與 Wi-Fi（精簡，看一次即可） -->
+        <div class="grid md:grid-cols-2 gap-4 mb-6">
+            <section class="bg-amber-50/70 rounded-xl border border-amber-200 p-4">
+                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+                    今日場地
+                </h3>
+                <p class="font-bold text-slate-800 text-sm">集思台大會議中心 · 尼采廳（B1）</p>
+                <p class="text-slate-600 text-xs mt-1">羅斯福路四段 85 號 B1 · 公館站 2 號出口左轉 2 分鐘</p>
+            </section>
+            <section class="bg-slate-50 rounded-xl border border-slate-200 p-4">
+                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12.55a11 11 0 0 1 14.08 0"/><path d="M1.42 9a16 16 0 0 1 21.16 0"/><path d="M8.53 16.11a6 6 0 0 1 6.95 0"/><circle cx="12" cy="20" r="1"/></svg>
+                    Wi-Fi
+                </h3>
+                <p class="text-slate-800 text-sm font-mono">請向工作人員索取</p>
+            </section>
+        </div>
 
         <!-- 場地配置 -->
         <section class="bg-white rounded-2xl shadow-sm border border-slate-200 p-6 md:p-8 mb-6">
