--- a/info.html
+++ b/info.html
@@ -19,7 +19,25 @@
             <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × Dinngo</p>
         </header>
 
-        <!-- 今日時間表（置頂，最重要） -->
+        <!-- 今日場地與 Wi-Fi（置頂，避免忘記） -->
+        <div class="grid md:grid-cols-2 gap-4 mb-6">
+            <section class="bg-amber-50/70 rounded-xl border border-amber-200 p-4">
+                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+                    今日場地
+                </h3>
+                <p class="font-bold text-slate-800 text-sm">集思台大會議中心 · 尼采廳（B1）</p>
+            </section>
+            <section class="bg-slate-50 rounded-xl border border-slate-200 p-4">
+                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12.55a11 11 0 0 1 14.08 0"/><path d="M1.42 9a16 16 0 0 1 21.16 0"/><path d="M8.53 16.11a6 6 0 0 1 6.95 0"/><circle cx="12" cy="20" r="1"/></svg>
+                    Wi-Fi
+                </h3>
+                <p class="text-slate-800 text-sm font-mono">請向工作人員索取</p>
+            </section>
+        </div>
+
+        <!-- 今日時間表 -->
         <section class="bg-white rounded-2xl shadow-lg border-2 border-amber-200 p-6 md:p-10 mb-6">
             <h2 class="flex items-center gap-3 text-2xl font-bold text-slate-800 mb-6 border-l-4 border-amber-500 pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
@@ -90,56 +108,13 @@
             </div>
         </section>
 
-        <!-- 場地與 Wi-Fi（精簡，看一次即可） -->
-        <div class="grid md:grid-cols-2 gap-4 mb-6">
-            <section class="bg-amber-50/70 rounded-xl border border-amber-200 p-4">
-                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                    今日場地
-                </h3>
-                <p class="font-bold text-slate-800 text-sm">集思台大會議中心 · 尼采廳（B1）</p>
-                <p class="text-slate-600 text-xs mt-1">羅斯福路四段 85 號 B1 · 公館站 2 號出口左轉 2 分鐘</p>
-            </section>
-            <section class="bg-slate-50 rounded-xl border border-slate-200 p-4">
-                <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12.55a11 11 0 0 1 14.08 0"/><path d="M1.42 9a16 16 0 0 1 21.16 0"/><path d="M8.53 16.11a6 6 0 0 1 6.95 0"/><circle cx="12" cy="20" r="1"/></svg>
-                    Wi-Fi
-                </h3>
-                <p class="text-slate-800 text-sm font-mono">請向工作人員索取</p>
-            </section>
-        </div>
-
-        <!-- 場地配置 -->
+        <!-- 場地示意圖 -->
         <section class="bg-white rounded-2xl shadow-sm border border-slate-200 p-6 md:p-8 mb-6">
             <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-4 border-l-4 border-amber-500 pl-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                場地配置
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+                場地示意圖
             </h2>
-            <div class="space-y-4">
-                <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">地址</p>
-                    <p class="font-bold text-slate-800">臺北市大安區羅斯福路四段 85 號 B1</p>
-                    <p class="text-slate-600 text-sm mt-1">公館水源市場對面，近羅斯福路與基隆路交叉口</p>
-                </div>
-                <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">交通</p>
-                    <p class="font-bold text-slate-800">捷運公館站 2 號出口左轉，步行 2 分鐘</p>
-                    <p class="text-slate-600 text-sm mt-1">公車：254、0南、1、208、236、251、278、284、290 等至「捷運公館站」</p>
-                    <p class="text-slate-600 text-sm mt-1">開車：台大公館二活停車場</p>
-                </div>
-                <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">廁所</p>
-                    <p class="font-bold text-slate-800">B1 樓層走廊旁</p>
-                </div>
-                <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">尼采廳設施</p>
-                    <p class="text-slate-600">完全無樑柱階梯式空間 · 120 吋投影布幕 · 無線麥克風 · 白板</p>
-                </div>
-            </div>
-            <div class="mt-6">
-                <h3 class="text-lg font-bold text-slate-700 mb-3">場地示意圖</h3>
-                <img src="https://duk.tw/WQzLj0.png" alt="集思台大會議中心尼采廳平面圖" class="w-full max-w-2xl rounded-lg shadow-md border border-slate-200">
-            </div>
+            <img src="https://duk.tw/WQzLj0.png" alt="集思台大會議中心尼采廳平面圖" class="w-full max-w-2xl rounded-lg shadow-md border border-slate-200">
         </section>
 
         <!-- 午餐與附近餐飲 -->
