--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div className="flex items-center gap-3 md:gap-4">
                             {slides[0]?.slidoUrl && (
                                 <a href={slides[0].slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white font-bold text-sm md:text-base rounded-full shadow-md transition-all hover:scale-105 shrink-0">
-                                    即時匿名提問 →
+                                    即時提問 →
                                 </a>
                             )}
                             <span className="text-slate-300">|</span>
