--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         return (
                             <div className="flex flex-col items-center justify-center h-full text-center px-6 overflow-hidden">
                                 <div className="mb-6 md:mb-10">
-                                    <span className="bg-amber-100 text-amber-800 py-2 px-4 rounded-full text-base md:text-lg font-bold tracking-wide uppercase">Workshop</span>
+                                    <span className="bg-amber-100 text-amber-800 py-2 px-4 rounded-full text-base md:text-lg font-bold tracking-wide uppercase">實戰特訓</span>
                                 </div>
                                 <h1 className="text-4xl md:text-7xl font-bold text-slate-900 mb-6 leading-tight max-w-5xl">{slide.title}</h1>
                                 <p className="text-xl md:text-3xl text-slate-500 mb-10 max-w-3xl leading-relaxed">{slide.subtitle}</p>
