--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>企業 Web3 實戰工作坊 | 區塊勢 × Dinngo</title>
+    <title>企業 Web3 工作坊 | 區塊勢 × Dinngo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js" crossorigin></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
@@ -51,7 +51,7 @@
             {
                 id: 1,
                 layout: 'cover',
-                title: "企業 Web3 實戰工作坊",
+                title: "企業 Web3 工作坊",
                 subtitle: "加密貨幣在搞什麼鬼？用白話拆解加密貨幣",
                 slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z",
                 slidoCode: "web3"
