--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 content: (
                     <div className="flex flex-col md:flex-row gap-6 md:gap-10 h-full justify-center items-center">
                         <div className="flex-shrink-0">
-                            <img src="https://duk.tw/3vKPbT.jpg" alt="許明恩" className="w-40 h-40 md:w-52 md:h-52 rounded-2xl object-cover shadow-lg border-2 border-slate-200" />
+                            <img src="https://duk.tw/3vKPbT.jpg" alt="許明恩" className="w-32 md:w-44 h-auto max-h-[420px] rounded-2xl object-contain shadow-lg border-2 border-slate-200" />
                         </div>
                         <div className="space-y-6 flex-1">
                             <div className="p-4 bg-amber-50 rounded-xl border border-amber-100">
@@ -74,22 +74,15 @@
                                 </p>
                             </div>
                             <ul className="space-y-4">
-                                <li className="flex items-start">
-                                    <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">背書</span>
-                                    <div>
-                                        <h4 className="text-xl font-bold text-slate-800 mb-1">受邀單位</h4>
-                                        <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx</p>
-                                    </div>
+                                <li>
+                                    <h4 className="text-xl font-bold text-slate-800 mb-1">受邀單位</h4>
+                                    <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx</p>
                                 </li>
-                                <li className="flex items-start">
-                                    <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">認證</span>
-                                    <div>
-                                        <h4 className="text-xl font-bold text-slate-800 mb-1">Medium Top writer in Bitcoin</h4>
-                                        <p className="text-lg text-slate-600">富昇數位董事 · 2024 以太坊基金會 Devcon 學人</p>
-                                    </div>
+                                <li>
+                                    <h4 className="text-xl font-bold text-slate-800 mb-1">Medium Top writer in Bitcoin</h4>
+                                    <p className="text-lg text-slate-600">富昇數位董事 · 2024 以太坊基金會 Devcon 學人</p>
                                 </li>
                             </ul>
-                            <p className="text-lg text-slate-500 italic">「我也不信」— 先承認質疑，與非幣圈聽眾站在同一邊</p>
                         </div>
                     </div>
                 )
