--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
         const IconChart = () => (
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M3 3v18h18"/><path d="m19 9-5 5-4-4-3 3"/></svg>
         );
+        const IconCow = () => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round">
+                <path d="M7 10V6l3 2 2-2 2 2 3-2v4" />
+                <path d="M5.5 10.5c-.8.7-1.5 1.8-1.5 3.5 0 3.5 3.3 6 8 6s8-2.5 8-6c0-1.7-.7-2.8-1.5-3.5" />
+                <path d="M8 14h.01M16 14h.01" />
+                <path d="M10 16c.7.7 1.3 1 2 1s1.3-.3 2-1" />
+                <path d="M6 13c.2 1.3 1 2.2 2 2.8M18 13c-.2 1.3-1 2.2-2 2.8" />
+            </svg>
+        );
+        const IconGold = () => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round">
+                <ellipse cx="12" cy="6.5" rx="7.5" ry="3.5" />
+                <path d="M4.5 6.5v5c0 1.9 3.4 3.5 7.5 3.5s7.5-1.6 7.5-3.5v-5" />
+                <path d="M4.5 11.5v5c0 1.9 3.4 3.5 7.5 3.5s7.5-1.6 7.5-3.5v-5" />
+            </svg>
+        );
+        const IconBanknote = () => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round">
+                <rect x="3" y="6" width="18" height="12" rx="2" />
+                <path d="M7 10c0 1.1-.9 2-2 2M19 10c0 1.1.9 2 2 2M7 14c0-1.1-.9-2-2-2M19 14c0-1.1.9-2 2-2" />
+                <circle cx="12" cy="12" r="2.2" />
+            </svg>
+        );
+        const IconMobilePay = () => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round">
+                <rect x="7" y="2.5" width="10" height="19" rx="2" />
+                <path d="M10 5.5h4" />
+                <path d="M11.5 18.5h.01" />
+                <path d="M17.6 10.2c.9.5 1.5 1.4 1.5 2.5s-.6 2-1.5 2.5" />
+                <path d="M19.6 9.2c1.4.9 2.4 2.4 2.4 4s-1 3.1-2.4 4" />
+            </svg>
+        );
 
         const slides = [
             {
@@ -272,7 +304,7 @@
             {
                 id: 7,
                 layout: 'timeline',
-                title: "流程",
+                title: "今日流程",
                 steps: [
                     { phase: "Part 1", title: "價值從無到有", desc: "比特幣與共識機制、挖礦與數位資產的誕生", icon: <IconBitcoin /> },
                     { phase: "Part 2", title: "數位透明世界", desc: "區塊鏈不可竄改、鏈上查詢與透明金流", icon: <IconChart /> },
@@ -282,12 +314,46 @@
             },
             {
                 id: 8,
+                layout: 'detail',
+                tag: "段落分頁",
+                title: "入門比特幣",
+                content: (
+                    <div className="flex flex-col items-center justify-center h-full text-center py-10">
+                        <div className="mb-6">
+                            <IconBitcoin />
+                        </div>
+                        <p className="text-xl md:text-2xl text-slate-600 font-bold">從價值載體到點對點現金</p>
+                    </div>
+                )
+            },
+            {
+                id: 9,
                 layout: 'split',
-                title: "入門比特幣：從價值載體到點對點現金",
+                title: "價值載體數位化",
                 leftContent: (
                     <div className="space-y-5">
+                        <div className="bg-white p-5 rounded-2xl shadow-sm border border-slate-100">
+                            <div className="grid grid-cols-4 gap-3 md:gap-4 items-center">
+                                <div className="flex flex-col items-center justify-center gap-2">
+                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconCow />}</div>
+                                    <div className="text-xs md:text-sm font-bold text-slate-500">牛</div>
+                                </div>
+                                <div className="flex flex-col items-center justify-center gap-2">
+                                    <div className="p-3 bg-amber-50 rounded-2xl border border-amber-100">{<IconGold />}</div>
+                                    <div className="text-xs md:text-sm font-bold text-slate-500">黃金</div>
+                                </div>
+                                <div className="flex flex-col items-center justify-center gap-2">
+                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconBanknote />}</div>
+                                    <div className="text-xs md:text-sm font-bold text-slate-500">紙鈔</div>
+                                </div>
+                                <div className="flex flex-col items-center justify-center gap-2">
+                                    <div className="p-3 bg-blue-50 rounded-2xl border border-blue-100">{<IconMobilePay />}</div>
+                                    <div className="text-xs md:text-sm font-bold text-slate-500">數位支付</div>
+                                </div>
+                            </div>
+                        </div>
                         <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                            <h3 className="text-xl font-bold text-slate-800 mb-2">價值載體數位化</h3>
+                            <h3 className="text-xl font-bold text-slate-800 mb-2">價值載體的演進</h3>
                             <p className="text-lg text-slate-600">人類一直在讓價值載體更易攜帶、易交易。貨幣越來越「沒用」— 不一定要能吃、能用、摸得著，最終只剩「交易便利」。</p>
                         </div>
                         <div className="bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
@@ -313,7 +379,7 @@
                 )
             },
             {
-                id: 9,
+                id: 10,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -348,7 +414,7 @@
                 )
             },
             {
-                id: 10,
+                id: 11,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -380,7 +446,7 @@
                 )
             },
             {
-                id: 11,
+                id: 12,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -405,7 +471,7 @@
                 )
             },
             {
-                id: 12,
+                id: 13,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -432,7 +498,7 @@
                 )
             },
             {
-                id: 13,
+                id: 14,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -467,7 +533,7 @@
                 )
             },
             {
-                id: 14,
+                id: 15,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
