--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
                             {/* 卡片層 */}
                             <div className="flex flex-col md:flex-row w-full items-center justify-between gap-4 z-10 relative">
                                 {/* 1. 礦機 */}
-                                <div className="flex flex-col items-center justify-center p-6 md:p-10 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2">
-                                    <span className="text-6xl md:text-7xl mb-4">🖥️</span>
-                                    <p className="font-bold text-xl md:text-2xl text-slate-800 tracking-wide text-center">礦機運作</p>
+                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-slate-900 rounded-3xl border-2 border-slate-700 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
+                                    <div className="flex-1 w-full min-h-0 flex items-center justify-center">
+                                        <img src="assets/mining-gpu.png" alt="礦機" className="w-full h-full object-contain" />
+                                    </div>
+                                    <p className="font-bold text-lg md:text-xl text-white tracking-wide text-center flex-shrink-0 pt-2">礦機運作</p>
                                 </div>
                                 
                                 <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
